# manul_tracer

./: .gitignore  Dockerfile  check_db.py  pyproject.toml  test_data_generator.py
examples/streamlit_demo/: app.py  requirements.txt
sample_app/: Dockerfile  app.py  requirements.txt
scripts/: build.sh  docker-run.sh  stop.sh  test.sh
src/manul_tracer/: __init__.py  analytics.py  cli.py  image_utils.py  models.py  parsers.py  tracer.py  transport.py  utils.py
src/manul_tracer/database/: __init__.py
src/manul_tracer/database/repositories/: __init__.py  base.py  session_repository.py  trace_repository.py
src/manul_tracer/streamlit_app/: main.py
src/manul_tracer/streamlit_app/pages/: 01_Overview.py  02_Performance.py  03_Sessions_and_Traces.py
tests/: test_tracer.py
tracer/: pyproject.toml  tracer.py
tracer/manul_tracer/: __init__.py  tracer.py
