[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manul-tracer"
version = "0.1.0"
description = "OpenAI API call tracer for monitoring and debugging"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.24.0",
    "openai>=1.0.0",
    "duckdb==1.3.2",
    "streamlit>=1.41.0",
    "plotly>=5.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
manul-tracer = "manul_tracer.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/manul-tracer"
Repository = "https://github.com/yourusername/manul-tracer"

[tool.setuptools.packages.find]
where = ["src"]
include = ["manul_tracer*"]